# sqeel

./: .gitmodules  CHANGELOG.md  Cargo.toml  DONATE.md  DONATING.md  PLANS.md  README.md  SQEEL.md  TODO.md
.config/: nextest.toml
.github/actions/sync-hjkl/: action.yml
.github/workflows/: ci.yml  pages.yml  release.yml
apps/sqeel/: Cargo.toml  README.md
apps/sqeel/tests/: e2e.rs  headless.rs
apps/sqeel/tests/pty_harness/: harness.rs  mod.rs  smoke.rs
crates/sqeel-config/: CHANGELOG.md  Cargo.toml  README.md
crates/sqeel-config/src/: config.toml  lib.rs  pgpass.rs
crates/sqeel-core/: CHANGELOG.md  Cargo.toml
crates/sqeel-core/src/: config.rs  db.rs  highlight.rs  lib.rs  lsp.rs  persistence.rs  safety.rs  schema.rs  state.rs
crates/sqeel-tui/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
crates/sqeel-tui/src/: completion_thread.rs  ex.rs  exec.rs  host.rs  lib.rs  picker.rs  render.rs  splash.rs  syntax.rs  theme.rs
crates/sqeel-tui/themes/: gruvbox.toml  tokyonight.toml
pkg/alpine/: APKBUILD.in
pkg/aur/: .gitignore  LICENSE  PKGBUILD-bin.in
pkg/homebrew/: sqeel.rb.in
sqeel/: Cargo.toml  README.md
sqeel-buffer/src/: buffer.rs  edit.rs  folds.rs  lib.rs  motion.rs  render.rs  selection.rs  viewport.rs  wrap.rs
sqeel-gui/: Cargo.toml  README.md
sqeel-gui/src/: lib.rs
sqeel-tui/: Cargo.toml  README.md
sqeel-tui/src/: clipboard.rs  completion_thread.rs  editor.rs  highlight_thread.rs  host.rs  lib.rs  spinner.rs  theme.rs
sqeel-tui/src/editor/: mod.rs  vim.rs
sqeel-tui/themes/: tokyonight.toml
sqeel-vim/src/: editor.rs  ex.rs  input.rs  lib.rs  registers.rs  render.rs  vim.rs
web/: index.html  sitemap.xml
