[workspace]
members = ["crates/*", "apps/*"]
default-members = ["apps/sqeel"]
resolver = "2"

[workspace.package]
version = "0.2.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/sqeel"
homepage = "https://sqeel.kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]

[patch.crates-io]
sqeel-core = { path = "crates/sqeel-core" }
sqeel-tui = { path = "crates/sqeel-tui" }
