[package]
name = "sqeel-tui"
description = "Ratatui TUI front-end for sqeel: vim-modal SQL editing with hjkl bindings."
keywords = ["sql", "tui", "vim", "ratatui", "client"]
categories = ["command-line-interface", "database"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
sqeel-core = { path = "../sqeel-core", version = "=0.2.0" }
hjkl-engine = "=0.2.0"
hjkl-editor = "=0.2.0"
hjkl-buffer = { version = "=0.2.0", features = ["ratatui"] }
anyhow = "1"
ratatui = "0.29.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
regex = "1"
tokio = { version = "1.52.1", features = ["full"] }
lsp-types = "0.97.0"
hjkl-clipboard = "=0.2.0"
hjkl-form = "=0.2.0"
hjkl-ratatui = "=0.2.0"
hjkl-tree-sitter = "=0.2.0"
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"
pulldown-cmark = { version = "0.11", default-features = false }
unicode-width = "0.2"
