[package]
name = "sqeel-tui"
description = "Ratatui TUI front-end for sqeel: vim-modal SQL editing with hjkl bindings."
keywords = ["sql", "tui", "vim", "ratatui", "client"]
categories = ["command-line-interface", "database"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"

[dependencies]
sqeel-core = { path = "../sqeel-core", version = "0.2" }
hjkl-engine = "0.3"
hjkl-editor = "0.3"
hjkl-buffer = { version = "0.3", features = ["ratatui"] }
anyhow = "1"
ratatui = "0.30"
crossterm = { version = "0.29.0", features = ["event-stream"] }
regex = "1"
tokio = { version = "1.52.1", features = ["full"] }
lsp-types = "0.97.0"
hjkl-clipboard = "0.4"
hjkl-form = "0.3"
hjkl-ratatui = "0.3"
hjkl-bonsai = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "1"
dirs = "6"
pulldown-cmark = { version = "0.11", default-features = false }
unicode-width = "0.2"
