[package]
name = "sqeel"
description = "Vim-modal SQL client: TUI + GUI front-ends for sqlx-backed connections with LSP-aware editing."
keywords = ["sql", "vim", "tui", "gui", "client"]
categories = ["database", "command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
default-run = "sqeel"

[[bin]]
name = "sqeel"
path = "src/bin/sqeel.rs"

[[bin]]
name = "sqeel-gui"
path = "src/bin/sqeel-gui.rs"

[dependencies]
sqeel-core = { path = "../../crates/sqeel-core", version = "0.2" }
sqeel-tui = { path = "../../crates/sqeel-tui", version = "0.2" }
sqeel-gui = { path = "../../crates/sqeel-gui", version = "0.2" }
anyhow = "1"
eframe = "0.31"
egui = "0.31"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
tempfile = "3.27.0"
