[package]
name = "sqeel"
description = "Vim-modal SQL client: TUI front-end for sqlx-backed connections with LSP-aware editing."
keywords = ["sql", "vim", "tui", "client"]
categories = ["database", "command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
default-run = "sqeel"

[[bin]]
name = "sqeel"
path = "src/bin/sqeel.rs"

[dependencies]
sqeel-core = { path = "../../crates/sqeel-core", version = "0.3" }
sqeel-tui = { path = "../../crates/sqeel-tui", version = "0.3" }
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
tokio = { version = "1.52.1", features = ["full"] }
tempfile = "3.27.0"
