[package]
name = "sqeel"
description = "Vim-modal SQL client: TUI front-end for sqlx-backed connections with LSP-aware editing."
keywords = ["sql", "vim", "tui", "client"]
categories = ["database", "command-line-utilities"]
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
readme = "README.md"
default-run = "sqeel"

[[bin]]
name = "sqeel"
path = "src/bin/sqeel.rs"

[dependencies]
sqeel-core = { path = "../../crates/sqeel-core", version = "0.5" }
sqeel-tui = { path = "../../crates/sqeel-tui", version = "0.5" }
anyhow = "1"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = "4"
clap_complete_nushell = "4"
clap_mangen = "0.3"
tokio = { version = "1.52.1", features = ["full"] }
tempfile = "3.27.0"
tracing = "0.1"
serde_json = "1"
url = "2"

[dev-dependencies]
portable-pty = "0.9"
vt100 = "0.16"
