[package]
name = "sqeel-config"
description = "Config loading for sqeel: MainConfig / EditorConfig on top of hjkl-config."
keywords = ["sql", "tui", "config"]
categories = ["database", "command-line-utilities"]
version = "0.3.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/sqeel-config"
homepage = "https://sqeel.kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
readme = "README.md"

[dependencies]
hjkl-config = "0.33"
hjkl-engine = "0.33"
serde = { version = "1", features = ["derive"] }
toml = "1"
anyhow = "1"
keyring-core = "1"
url = "2"
dirs = "6"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
