[package]
name = "sqeel-tui"
description = "Ratatui TUI front-end for sqeel: vim-modal SQL editing with hjkl bindings."
keywords = ["sql", "tui", "vim", "ratatui", "client"]
categories = ["command-line-interface", "database"]
version = "0.4.17"
edition = "2024"
license = "MIT"
repository = "https://github.com/kryptic-sh/sqeel-tui"
homepage = "https://sqeel.kryptic.sh"
authors = ["mxaddict <mxaddict@kryptic.sh>"]
rust-version = "1.95"
readme = "README.md"

[dependencies]
sqeel-config = { version = "0.2", path = "../sqeel-config" }
sqeel-core = { version = "0.4", path = "../sqeel-core" }
hjkl-splash = "0.33"
hjkl-engine = "0.33"
hjkl-engine-tui = "0.33"
hjkl-vim = "0.33"
hjkl-editor-tui = "0.33"
hjkl-ex = "0.33"
hjkl-buffer = "0.33"
hjkl-buffer-tui = "0.33"
hjkl-clipboard = "0.33"
hjkl-picker = "0.33"
hjkl-picker-tui = "0.33"
hjkl-form = "0.33"
hjkl-bonsai = "0.33"
anyhow = "1"
ratatui = "0.30"
crossterm = { version = "0.29.0", features = ["event-stream"] }
regex = "1"
tokio = { version = "1.52.1", features = ["full"] }
lsp-types = "0.97.0"
serde = { version = "1", features = ["derive"] }
toml = "1"
pulldown-cmark = { version = "0.11", default-features = false }
unicode-width = "0.2"
which = "8"
hjkl-anvil = "0.33"
chrono = "0.4"
dirs = "6.0.0"
tracing = "0.1"

[dev-dependencies]
tempfile = "3"
